# Harness-Communication-Protocol

./: .gitignore  README.md  README.zh.md  SPEC.md  _config.yml  index.md  pyproject.toml
discuss/: discussion-log.md
hcp/: __init__.py  agent.py  capability.py  exceptions.py  messages.py  queue.py  security.py
hcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
spec/: L1-transport-encoding.md  L2-session-lifecycle.md  L3-safety-contract.md  L4-task.md  architecture.md  index.md  overview.md
spec/zh/: L1-transport-encoding.md  L2-session-lifecycle.md  L3-safety-contract.md  L4-task.md  architecture.md  index.md  overview.md
tests/: test_agent.py  test_capability.py  test_integration.py  test_messages.py  test_queue.py  test_security.py
